# screen-forest

./: .gitignore  README.md  pyproject.toml  screen_forest.py
data/: target_model_data.xlsx
lit-pcba/ALDH1/: active_T.smi  active_V.smi  inactive_V.smi
lit-pcba/ESR1_ago/: active_T.smi  inactive_T.smi  inactive_V.smi
lit-pcba/ESR1_ant/: inactive_V.smi
lit-pcba/GBA/: active_T.smi
lit-pcba/IDH1/: active_T.smi  active_V.smi
lit-pcba/KAT2A/: active_T.smi
lit-pcba/MAPK1/: active_V.smi
lit-pcba/MTORC1/: active_V.smi  inactive_T.smi
lit-pcba/OPRK1/: active_V.smi  inactive_V.smi
lit-pcba/PKM2/: active_T.smi  inactive_V.smi
lit-pcba/PPARG/: inactive_T.smi  inactive_V.smi
lit-pcba/TP53/: active_T.smi  active_V.smi  inactive_V.smi
lit-pcba/VDR/: active_T.smi  active_V.smi  inactive_V.smi
litpcba_data/ADRB2/: active_T.smi
litpcba_data/ESR1_ago/: active_V.smi
litpcba_data/ESR1_ant/: active_T.smi  inactive_T.smi
litpcba_data/GBA/: active_V.smi  inactive_V.smi
litpcba_data/KAT2A/: active_V.smi
litpcba_data/MAPK1/: active_T.smi  inactive_T.smi  inactive_V.smi
litpcba_data/MTORC1/: active_T.smi  inactive_V.smi
litpcba_data/OPRK1/: active_T.smi
litpcba_data/PKM2/: active_V.smi
litpcba_data/PPARG/: active_T.smi  active_V.smi
litpcba_data/custom/: active_T.smi  active_V.smi  inactive_T.smi  inactive_V.smi
screen_forest/: clip.py  ligand_screening_tool.py  main.py  test.py
screen_forest/lit_pcba/: lit_pcba.py
screen_forest/lit_pcba/data/ADRB2/: active_V.smi
screen_forest/utils/: get_litpcba.py
(+3 files in other folders)
