[tool.poetry]
name = "screen-forest"
version = "0.1.0"
description = ""
authors = ["mariusrueve <44000950+mariusrueve@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
scikit-learn = "^1.5.1"
rdkit = "^2024.3.5"
pandas = "^2.2.2"
click = "^8.1.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
